--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           </div>
           <h3>CANTEEN</h3>
           <p>
-            The Food Service at ujjwal School aims to provide nutritious lunch and snack options that meet the developmental needs of our students.
+            The Food Service at UEBS aims to provide nutritious lunch and snack options that meet the developmental needs of our students.
           </p>
         </div>
       </div>
